--- a/message/templates/base.html
+++ b/message/templates/base.html
@@ -11,6 +11,11 @@
     <div>
         <a href="/">首頁</a>
         <a href="/message/create/">新增留言</a>
+        {% if user.is_authenticated %} 
+             <a href="{% url 'logout' %}">登出</a>
+        {% else %}
+             <a herf="{% url 'login' %}">登入</a>
+        {% endif %}
     </div>
     <div>{% block content %}{% endblock %}</div>
 </body>
